# asmartboard

./: AGENTS.md  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
src/: app.rs  assets.rs  main.rs  passthrough_helper.rs  render.rs  ui.rs
src/state/: flat.rs  mod.rs
src/utils/: dark_mode.rs  logger.rs  mod.rs  stroke.rs  ui.rs  windows.rs
