[package]
name = "erh_smartboard"
description = "A powerful digital whiteboard built with Rust, winit, egui, and wgpu."
version = "0.4.1"
authors = ["Fey Xie <feyxiexzf@gmail.com>"]
edition = "2024"
repository = "https://github.com/Keneeeeeert/erh_smartboard/"
license-file = "LICENSE"

[features]
default = ["system_font"]
startup_animation = ["rodio"]
embedded_font = []
system_font = ["fontdb"]
profiling = ["dep:profiling", "puffin", "puffin_egui"]

[dependencies]
# ui & render
egui = { version = "0.34", default-features = false, features = [
    "serde",
    "rayon",
] }
egui-winit = { version = "0.34", default-features = false }
winit = { version = "0.30", default-features = false }
egui-wgpu = { version = "0.34", features = ["winit"] }
wgpu = { version = "29", default-features = false, features = [
    "dx12",
    "metal",
    "parking_lot",
    "serde",
    "std",
    "vulkan",
    "wgsl",
] }

# ui utils
egui-notify = "0.22"
image = { version = "0.25", default-features = false, features = [
    "ico",
    "jpeg",
    "png",
    "webp",
] }
tray-icon = "0.24"
ttf-parser = "0.25"
rfd = "0.17"

# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rkyv = { version = "0.8", features = ["alloc", "bytecheck"] }

# utils
pollster = "0.4"
dirs = "6"

# features dependencies
rodio = { version = "0.22", default-features = false, features = [
    "wav",
    "playback",
], optional = true }
fontdb = { version = "0.23", optional = true }
profiling = { version = "1", optional = true, features = [
    "profile-with-puffin",
] }
puffin = { version = "0.20", optional = true }
puffin_egui = { version = "0.30", optional = true }

[patch.crates-io]
puffin = { git = "https://github.com/EmbarkStudios/puffin" }      # crates.io version uses out-of-date egui
puffin_egui = { git = "https://github.com/EmbarkStudios/puffin" } # crates.io version uses out-of-date egui

[build-dependencies]
winres = "0.1"

[target.'cfg(target_os = "linux")'.dependencies]
glib = { version = "0.22", default-features = false }
egui-winit = { version = "0.34", default-features = false, features = [
    "wayland",
] }
winit = { version = "0.30", default-features = false, features = ["wayland"] }
egui-wgpu = { version = "0.34", features = ["wayland"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = [
    "Win32_System_Console",
    "Win32_System_Com",
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
windows-core = { version = "0.62", default-features = false }
winreg = "0.56"

[profile.release]
strip = true
debug = 0
